--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -35,6 +35,11 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v3.5.3
+      - name: Install Rustup
+        run: |
+          curl --proto '=https' --tlsv1.2 --retry 10 --location --silent --show-error --fail "https://sh.rustup.rs" | sh -s -- --default-toolchain none -y
+          echo "$HOME/.cargo/bin" >> $GITHUB_PATH
+        shell: bash
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
         with:
